feat: added footer

--- a/travel/index.html
+++ b/travel/index.html
@@ -121,6 +121,15 @@
     </main>
 
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container_links">
+            <div class="rights">All Rights Reserved © Travel Portal</div>
+            <div class="icons">
+                <div class="inst"><a href="#!" class="inst_link"><img src="./img/akar-icons_instagram-fill.svg" alt="inst" class="inst_pic"></a></div>
+                <div class="yt"><a href="#!" class="yt_link"><img src="./img/akar-icons_video.svg" alt="yt" class="yt_pic"></a></div>
+                <div class="twitter"><a href="#!" class="tw_link"><img src="./img/akar-icons_twitter-fill.svg" alt="" class="tw_pic"></a></div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
