--- a/travel/index.html
+++ b/travel/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/icons8-plane-16.png">
     <link rel="stylesheet" href="./css/normalize.css-master/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
@@ -15,13 +16,13 @@
                 <div class="header-logo"><a href="./index.html" class="header_logo_link"><img src="./img/header_logo.svg" alt="logo_pic" class="header_logo_pic"></a></div>
                 <div class="header_nav">
                     <ul class="header_nav_list">
-                        <li class="header_nav_item"><a href="#!" class="header_nav_item_link">How It Works</a></li>
-                        <li class="header_nav_item"><a href="#!" class="header_nav_item_link">Plan Your Trip</a></li>
-                        <li class="header_nav_item"><a href="#!" class="header_nav_item_link">Destinations</a></li>
-                        <li class="header_nav_item"><a href="#!" class="header_nav_item_link">Travel Stories</a></li>
+                        <li class="header_nav_item"><a href="#how_it_works" class="header_nav_item_link">How It Works</a></li>
+                        <li class="header_nav_item"><a href="#plan_trip" class="header_nav_item_link">Plan Your Trip</a></li>
+                        <li class="header_nav_item"><a href="#destinations" class="header_nav_item_link">Destinations</a></li>
+                        <li class="header_nav_item"><a href="#stories" class="header_nav_item_link">Travel Stories</a></li>
                     </ul>
                 </div>
-                <div class="header_login"><a href="#!" class="header_login_link"><img src="./img/header_login.svg" alt="login_pic" class="header_login_pic"></a></div>
+                <button class="header_login"><a href="#!" class="header_login_link">Login</a></button>
             </div>
         </div>
     </header>
@@ -33,12 +34,12 @@
             <div class="container">
                 <img src="./img/preview_bg.jpg" alt="bg_pic" class="bg_pic">
                 <div class="preview_content">
-                    <h1 class="preview_explore">Explore the beauty of the World</h1>
+                    <h1 class="preview_explore"><a id="how_it_works">Explore the beauty of the World</a></h1>
                     <p class="subtitle_preview">Receive personalized recommendations for countries, hotels, activities and more</p>
                     <div class="search">
                         <div class="search_content">
                             <div class="search_text">What would you like to do?</div>
-                            <div class="search_btn"><a href="#!" class="search_btn_link"><img src="./img/start_planning_btn.jpg" alt="start_planning" class="search_btn_pic"></a></div>
+                            <button class="search_button"><a href="#!" class="search_btn_link">Start Planning</a></button>
                         </div>
                     </div>
                 </div>
@@ -48,7 +49,7 @@
         <section class="steps">
             <div class="steps_container">
                 <div class="steps_content">
-                    <h2 class="steps_title">3 STEPS TO THE PERFECT TRIP</h2>
+                    <h2 class="steps_title"><a id="plan_trip">3 STEPS TO THE PERFECT TRIP</a></h2>
                     <div class="steps_list">
                         <div class="step_item_one">
                             <img src="./img/one_step.svg" alt="one" class="step_pic">
@@ -63,15 +64,23 @@
                             <div class="step_item_text">We will give you recommendations</div>
                         </div>
                     </div>
+                   
                 </div>
             </div>
         </section>
 
-        <section class="destinations">
+        <section class="destinations" id="destinatios">
             <div class="destinations_content">
-                <h2 class="dest_title">POPULAR DESTINATIONS</h2>
+                <h2 class="dest_title"><a id="destinations">POPULAR DESTINATIONS</a></h2>
                 <div class="slaider"><img src="./img/destinations.jpg" alt="slaider" class="dest_pic"></div>
-                <div class="find_more_btn"><img src="./img/find_more.svg" alt="find_more" class="find_more_btn"></div>
+                <div class="dots"><img src="./img/dots.jpg" alt="dots" class="dot"></div>
+                <div class="btn_find_more_block">
+                    <button class="find_more_btn">
+                        <img src="./img/bi_arrow-right.svg" alt="" class="arrow">
+                        <a href="#!" class="find_more_link">Find More</a>
+                    </button>
+                </div>
+               
             </div>
         </section>
 
@@ -79,14 +88,14 @@
             <img src="./img/bg_bg.jpg" alt="bg_stories" class="stories_color">
             <div class="stories_content">
                 <div class="container_st">
-                        <h2 class="stories_title">TRAVEL STORIES</h2>
+                    <h2 class="stories_title"><a id="stories">TRAVEL STORIES</a></h2>
                     <div class="text">
                         <div class="item">
                             <div class="st_pic"><img src="./img/thai.jpg" alt="thai" class="story_pic"></div>
                             <div class="st_content">
                                 <h3 class="st_title">10 Photos of Attractive Thailand</h3>
                                 <p class="story">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                <div class="read_more_link"><a href="#!" class="read_more">Read More</a></div>
+                                <a href="#!" class="read_more">Read More</a>
                             </div>
                         </div>
                         <div class="item">
@@ -94,7 +103,7 @@
                             <div class="st_content">
                                 <h3 class="st_title">Canyonlands National Park, Utah</h3>
                                 <p class="story">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                <div class="read_more_link"><a href="#!" class="read_more">Read More</a></div>
+                                <a href="#!" class="read_more">Read More</a>
                             </div>
                         </div>
                         <div class="item">
@@ -102,7 +111,7 @@
                             <div class="st_content">
                                 <h3 class="st_title">I left my heart in the Mountains!</h3>
                                 <p class="story">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                <div class="read_more_link"><a href="#!" class="read_more">Read More</a></div>
+                                <a href="#!" class="read_more">Read More</a>
                             </div>
                         </div>
                         <div class="item">
@@ -110,10 +119,16 @@
                             <div class="st_content">
                                 <h3 class="st_title">The Longest journey in my life!</h3>
                                 <p class="story">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                <div class="read_more_link"><a href="#!" class="read_more">Read More</a></div>
+                                <a href="#!" class="read_more">Read More</a>
                             </div>
                         </div>
-                        <div class="see_more"><a href="./img/see_more.svg" class="stories_link"></a></div>
+
+                    </div>
+                    <div class="btn_see_more_block">
+                        <button class="see_more_button">
+                            <img src="./img/bi_arrow-right.svg" alt="" class="arrow">
+                            <a href="#!" class="see_more_link">See More</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -123,11 +138,19 @@
 
     <footer class="footer">
         <div class="container_links">
+            <div class="my_links">
+                <ul class="items_footer_left">
+                    <li class="left_pic"><a href="https://rs.school/js/" class="rss_link" target="_blank"><img src="./img/rs_school_js.svg" alt="rsschool" class="rsschool_pic"></a></li>
+                    <li class="left_pic"><a href="https://github.com/OffLectra" class="git_link" target="_blank"><img src="./img/github.svg" alt="github" class="github_pic"></a></li>
+                </ul>
+            </div>
             <div class="rights">All Rights Reserved © Travel Portal</div>
-            <div class="icons">
-                <div class="inst"><a href="#!" class="inst_link"><img src="./img/akar-icons_instagram-fill.svg" alt="inst" class="inst_pic"></a></div>
-                <div class="yt"><a href="#!" class="yt_link"><img src="./img/akar-icons_video.svg" alt="yt" class="yt_pic"></a></div>
-                <div class="twitter"><a href="#!" class="tw_link"><img src="./img/akar-icons_twitter-fill.svg" alt="" class="tw_pic"></a></div>
+            <div class="my_links">
+                <ul class="items_footer_right">
+                    <li class="right_pic"><a href="https://www.instagram.com" class="inst_link" target="_blank"><img src="./img/akar-icons_instagram-fill.svg" alt="inst" class="inst_pic"></a></li>
+                    <li class="right_pic"><a href="https://www.youtube.com" class="yt_link" target="_blank"><img src="./img/akar-icons_video.svg" alt="yt" class="yt_pic"></a></li>
+                    <li class="right_pic"><a href="https://twitter.com" class="tw_link" target="_blank"><img src="./img/akar-icons_twitter-fill.svg" alt="twitter" class="tw_pic"></a></li>
+                </ul>
             </div>
         </div>
     </footer>
