fix: fixed buttons

--- a/travel/index.html
+++ b/travel/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,9 @@
                         <li class="header_nav_item"><a href="#stories" class="header_nav_item_link">Travel Stories</a></li>
                     </ul>
                 </div>
-                <button class="header_login"><a href="#!" class="header_login_link">Login</a></button>
+                <button class="header_login" onClick='location.href="https://rs.school/js/"'>
+                    <p class="header_login_link">Login</p>
+                </button>
             </div>
         </div>
     </header>
@@ -39,7 +41,9 @@
                     <div class="search">
                         <div class="search_content">
                             <div class="search_text">What would you like to do?</div>
-                            <button class="search_button"><a href="#!" class="search_btn_link">Start Planning</a></button>
+                            <button class="search_button" onClick='location.href="https://rs.school/js/"'>
+                                <p class="search_btn_link">Start Planning</p>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -75,9 +79,9 @@
                 <div class="slaider"><img src="./img/destinations.jpg" alt="slaider" class="dest_pic"></div>
                 <div class="dots"><img src="./img/dots.jpg" alt="dots" class="dot"></div>
                 <div class="btn_find_more_block">
-                    <button class="find_more_btn">
+                    <button class="find_more_btn" onClick='location.href="https://rs.school/js/"'>
                         <img src="./img/bi_arrow-right.svg" alt="" class="arrow">
-                        <a href="#!" class="find_more_link">Find More</a>
+                        <p class="find_more_link">Find More</p>
                     </button>
                 </div>
                
@@ -125,9 +129,9 @@
 
                     </div>
                     <div class="btn_see_more_block">
-                        <button class="see_more_button">
+                        <button class="see_more_button" onClick='location.href="https://rs.school/js/"'>
                             <img src="./img/bi_arrow-right.svg" alt="" class="arrow">
-                            <a href="#!" class="see_more_link">See More</a>
+                            <p class="see_more_link">See More</p>
                         </button>
                     </div>
                 </div>
