fix: fixed buttons (2)

--- a/travel/index.html
+++ b/travel/index.html
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
                 <button class="header_login" onClick='location.href="https://rs.school/js/"'>
-                    <p class="header_login_link">Login</p>
+                    Login
                 </button>
             </div>
         </div>
@@ -42,7 +42,7 @@
                         <div class="search_content">
                             <div class="search_text">What would you like to do?</div>
                             <button class="search_button" onClick='location.href="https://rs.school/js/"'>
-                                <p class="search_btn_link">Start Planning</p>
+                                Start Planning
                             </button>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                 <div class="btn_find_more_block">
                     <button class="find_more_btn" onClick='location.href="https://rs.school/js/"'>
                         <img src="./img/bi_arrow-right.svg" alt="" class="arrow">
-                        <p class="find_more_link">Find More</p>
+                        Find More
                     </button>
                 </div>
                
@@ -131,7 +131,7 @@
                     <div class="btn_see_more_block">
                         <button class="see_more_button" onClick='location.href="https://rs.school/js/"'>
                             <img src="./img/bi_arrow-right.svg" alt="" class="arrow">
-                            <p class="see_more_link">See More</p>
+                            See More
                         </button>
                     </div>
                 </div>
