feat: create branch travel-part2

--- a/travel/index.html
+++ b/travel/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./img/icons8-plane-16.png">
     <link rel="stylesheet" href="./css/normalize.css-master/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Travel</title>
 </head>
 <body>
     <header class="header">
