--- a/travel/index.html
+++ b/travel/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/adaptive.css">
     <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>    
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
+    <script src="script.js" defer></script>
+    <script src="js/swiper.js"></script>
     <title>Travel</title>
 </head>
 
@@ -67,7 +71,6 @@
         </div>
 
         <div class="wrapper">
-
             <section class="main__steps" id="plan">
                 <h2 class="steps__title">3 STEPS TO THE PERFECT TRIP</h2>
                 <div class="steps__content">
@@ -87,22 +90,46 @@
                     </div>
                 </div>
             </section>
-
-
-            <section class="main__destinations" id="destinations">
-                <h2 class="destinations__title">POPULAR DESTINATIONS</h2>
-                <div class="destinations__slaider"></div>
-                <div class="steps__button-block">
-                    <button class="button__find-more">
-                        <img src="img/arrow-right.png" alt="" class="button-arrow">
-                        Find More
-                    </button>
-                </div>
-            </section>
         </div>
 
+        <section class="main__destinations" id="destinations">
+            <h2 class="destinations__title">POPULAR DESTINATIONS</h2> 
 
-            <section class="main__stories" id="stories">                
+            <div class="destinations__slayder">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="./img/slayder_left_pic.png" alt="" class="card-img">
+                            <div class="card-text">SPAIN</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/slayder_middle_gate.png" alt="" class="card-img">
+                            <div class="card-text">JAPAN</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/slayder_right_gate.png" alt="" class="card-img">
+                            <div class="card-text">USA</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- pagination -->
+                <div class="swiper-pagination my-swiper"></div>
+  
+                <!-- navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+
+
+            <div class="steps__button-block">
+                <button class="button__find-more">
+                    <img src="img/arrow-right.png" alt="" class="button-arrow">
+                    Find More
+                </button>
+            </div>
+        </section>
+
+        <section class="main__stories" id="stories">                
                 <h2 class="stories__title">TRAVEL STORIES</h2>
                 <div class="story__bg-block">
                     <div class="bg-lighter">
@@ -206,12 +233,11 @@
                         </footer> 
                     </div>
                 </div>
-            </section>
+        </section>
     </main>
 
 
 
-    <script src="script.js"></script>
 </body>
 
 </html>
