fix: fixed stories content and started fixing adaptive

--- a/travel/index.html
+++ b/travel/index.html
@@ -29,22 +29,29 @@
                         Travel Portal
                     </a>
                 </div>
-                <nav class="header__navigation">
-                    <ul class="navigation__list">
-                        <li class="navigation__item">
-                            <a href="#how" class="item-link">How It Works</a>
-                        </li>
-                        <li class="navigation__item">
-                            <a href="#plan" class="item-link">Plan Your Trip</a>
-                        </li>
-                        <li class="navigation__item">
-                            <a href="#destinations" class="item-link">Destinations</a>
-                        </li>
-                        <li class="navigation__item">
-                            <a href="#stories" class="item-link">Travel Stories</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div class="header__menu menu">
+                    <div class="menu__icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <nav class="header__navigation">
+                        <ul class="navigation__list">
+                            <li class="navigation__item">
+                                <a href="#how" class="item-link">How It Works</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="#plan" class="item-link">Plan Your Trip</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="#destinations" class="item-link">Destinations</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="#stories" class="item-link">Travel Stories</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
                 <div class="header__login-button">
                     <button class="button__login">Login</button>
                 </div>
