feat: added burger layout

--- a/travel/index.html
+++ b/travel/index.html
@@ -29,28 +29,46 @@
                         Travel Portal
                     </a>
                 </div>
-                <div class="header__menu menu">
+                <div class="header__menu-block">
                     <div class="menu__icon">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                        <span id="menu__icon__span"></span>
+                        <span id="menu__icon__span"></span>
+                        <span id="menu__icon__span"></span>
                     </div>
-                    <nav class="header__navigation">
-                        <ul class="navigation__list">
-                            <li class="navigation__item">
-                                <a href="#how" class="item-link">How It Works</a>
-                            </li>
-                            <li class="navigation__item">
-                                <a href="#plan" class="item-link">Plan Your Trip</a>
-                            </li>
-                            <li class="navigation__item">
-                                <a href="#destinations" class="item-link">Destinations</a>
-                            </li>
-                            <li class="navigation__item">
-                                <a href="#stories" class="item-link">Travel Stories</a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <div class="header__menu">
+                        <div class="menu__icon__cross-block">
+                            <div class="cross">
+                                <span id="menu__icon__cross__span"></span>
+                                <span id="menu__icon__cross__span"></span>
+                            </div>
+                            
+                        </div>
+                        <nav class="header__navigation">
+                            <ul class="navigation__list">
+                                <li class="navigation__item">
+                                    <a href="#how" class="item-link">How It Works</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#plan" class="item-link">Plan Your Trip</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#destinations" class="item-link">Destinations</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#stories" class="item-link">Travel Stories</a>
+                                </li>
+
+                                <!-- Дополнительные пункты менюшки -->
+                                <li class="navigation__item" id="adaptive_links">
+                                    <a href="#" class="item-link"  id="adaptive_links">Account</a>
+                                </li>
+                                <li class="navigation__item" id="adaptive_links">
+                                    <a href="#" class="item-link" id="adaptive_links">Social Media</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    
                 </div>
                 <div class="header__login-button">
                     <button class="button__login">Login</button>
