fix: fixed navigation

--- a/travel/index.html
+++ b/travel/index.html
@@ -60,10 +60,10 @@
 
                                 <!-- Дополнительные пункты менюшки -->
                                 <li class="navigation__item" id="adaptive_links">
-                                    <a href="#" class="item-link"  id="adaptive_links">Account</a>
+                                    <a href="#" class="item-link">Account</a>
                                 </li>
                                 <li class="navigation__item" id="adaptive_links">
-                                    <a href="#" class="item-link" id="adaptive_links">Social Media</a>
+                                    <a href="#" class="item-link">Social Media</a>
                                 </li>
                             </ul>
                         </nav>
