fix: fixed navigation again

--- a/travel/index.html
+++ b/travel/index.html
@@ -59,10 +59,10 @@
                                 </li>
 
                                 <!-- Дополнительные пункты менюшки -->
-                                <li class="navigation__item" id="adaptive_links">
+                                <li class="navigation__item adaptive_links">
                                     <a href="#" class="item-link">Account</a>
                                 </li>
-                                <li class="navigation__item" id="adaptive_links">
+                                <li class="navigation__item adaptive_links">
                                     <a href="#" class="item-link">Social Media</a>
                                 </li>
                             </ul>
