--- a/travel/index.html
+++ b/travel/index.html
@@ -26,7 +26,9 @@
                 <div class="header__logo-block">
                     <a href="index.html" class="header__logo-link">
                         <img src="./img/logo.png" alt="logo">
-                        Travel Portal
+                        <p class="logo-word">
+                            Travel Portal
+                        </p>
                     </a>
                 </div>
                 <div class="header__menu-block">
@@ -99,17 +101,17 @@
             <section class="main__steps" id="plan">
                 <h2 class="steps__title">3 STEPS TO THE PERFECT TRIP</h2>
                 <div class="steps__content">
-                    <div class="steps__step">
+                    <div class="steps__step step-one">
                         <img src="./img/step_bicycle.png" alt="bicycle" class="step__img">
                         <p class="step__text">Tell us what you want to do</p>
                     </div>
                     <div class="steps__step__space-left"></div>
-                    <div class="steps__step">
+                    <div class="steps__step step-two">
                         <img src="./img/step_calendar.png" alt="calendar" class="step__img">
                         <p class="step__text">Share us preferable dates </p>
                     </div>
                     <div class="steps__step__space-right"></div>
-                    <div class="steps__step">
+                    <div class="steps__step step-three">
                         <img src="./img/step_plane.png" alt="plane" class="step__img">
                         <p class="step__text">We will give you recommendations</p>
                     </div>
@@ -166,9 +168,13 @@
                                     </div>
                                     <div class="story__text-block">
                                         <h3 class="story-title">10 Photos of Attractive Thailand</h3>
-                                        <div class="story-text">
+                                        <div class="story-text large-text">
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
-                                            <a href="" class="story-link">Read More</a>
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
+                                        <div class="story-text small-text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a... 
+                                            <a href="" class="story-link"><br>Read More</a>
                                         </div>
                                     </div>
                                 </div>
@@ -179,10 +185,14 @@
                                     </div>
                                     <div class="story__text-block">
                                         <h3 class="story-title">Canyonlands National Park, Utah</h3>
-                                        <p class="story-text">
+                                        <div class="story-text large-text">
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
-                                            <a href="" class="story-link">Read More</a>
-                                        </p>
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
+                                        <div class="story-text small-text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a... 
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
                                     </div>
                                 </div>
             
@@ -192,10 +202,14 @@
                                     </div>
                                     <div class="story__text-block">
                                         <h3 class="story-title">I left my heart in the Mountains!</h3>
-                                        <p class="story-text">
+                                        <div class="story-text large-text">
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
-                                            <a href="" class="story-link">Read More</a>
-                                        </p>
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
+                                        <div class="story-text small-text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a... 
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
                                     </div>
                                 </div>
             
@@ -205,10 +219,14 @@
                                     </div>
                                     <div class="story__text-block">
                                         <h3 class="story-title">The Longest journey in my life!</h3>
-                                        <p class="story-text">
+                                        <div class="story-text large-text">
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... 
-                                            <a href="" class="story-link">Read More</a>
-                                        </p>
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
+                                        <div class="story-text small-text">
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a... 
+                                            <a href="" class="story-link"><br>Read More</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
