feat: added adaptive login popup

--- a/travel/index.html
+++ b/travel/index.html
@@ -74,6 +74,47 @@
                     </div>
                 </div>
             </div>
+            <div class="popup" id="login__popup">
+                <div class="popup__body">
+                    <div class="popup__content">
+                        <div class="popup__title">Log in to your account</div>
+                        <button class="sign-btn__fb-block"><img src="./img/fb.png" alt="" class="fb">Sign In with Facebook</button>
+                        <div class="sign-btn__gg-block"><img src="./img/gg.png" alt="" class="gg">Sign In with Google</div>
+                        <div class="or-block"><hr class="or-line">or<hr class="or-line"></div>
+                        <form>
+                            <div class="form-group">
+                                <label for="email-input" class="form-group-label">E-mail</label>
+                                <input class="form-control item" id="email-input" type="email" name="email" id="email" placeholder="" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password-input" class="form-group-label">Password</label>
+                                <input class="form-control item" id="password-input" type="password" name="Пароль" minlength="6" id="password" placeholder="" required>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-primary btn-block create-account" type="submit">Sign In</button>
+                            </div>
+                        </form>
+                        <div class="forgot-link__block"> 
+                            <div class="forgot-link">Forgot Your Password?</div>
+                        </div>
+                        <hr class="forgot-line">
+                        <div class="register__block">Don’t have an account?&nbsp<div class="reg-link">Register</div></div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="popup" id="create__popup">
+                <div class="popup__body">
+                    <div class="create__content">
+                        <div class="create__title">Create account</div>
+                        <div class="email-form__block"></div>
+                        <div class="signUp-btn__block"></div>
+                        <div class="line"></div>
+                        <div class="login__block"></div>
+                    </div>
+                </div>
+            </div>
         </header>
     
 
